apps/nextcloud/base/ingress-external.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-secure
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`nextcloud.mimotej.stream`)
      kind: Rule
      middlewares:
        - name: middleware-crowdsec
          namespace: traefik
        - name: middleware-geoblock
          namespace: traefik
        - name: nextcloud-middleware-headers
      services:
        - name: nextcloud
          port: 8080
  tls:
    secretName: nextcloud-tls
